--- a/index.html
+++ b/index.html
@@ -2,8 +2,13 @@
 <html lang="pt-BR">
 
 <head>
+  <meta name="description" content="Portfolio profissional de um porgramador front-end!">
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="apple-touch-icon" sizes="180x180" href="./public//apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="./public//favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="./public/">
+  <link rel="manifest" href="./public/">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
