--- a/index.html
+++ b/index.html
@@ -6,10 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   <meta name="description" content="Portfolio profissional de um porgramador front-end!">
-  <!-- favicon
-  <link rel="apple-touch-icon" sizes="180x180" href="./public//apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="./public//favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="./public/"> -->
+  <!-- favicon -->
+  <link rel="shortcut icon" href="./public/favicon-16x16.png" type="image/x-icon">
   <!-- fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
