--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
   <meta name="description" content="Portfolio profissional de um porgramador front-end!">
   <!-- favicon -->
-  <link rel="shortcut icon" href="./public/favicon-16x16.png" type="image/x-icon">
+  <link rel="shortcut icon" href="./public/favicon.ico" type="image/x-icon">
   <!-- fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
